# openenv-hackathon

./: README.md  app.py  dockerfile  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
