[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "support-triage-env"
version = "1.0.0"
description = "Customer Support Triage OpenEnv"
dependencies = [
    "openenv-core",
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"